--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOVTYPE html>
 <HTML>
 <HEAD>
-<TITLE> Home2</TITLE>
+<TITLE> Dharya Bhardwaj</TITLE>
 <STYLE>
 body{background-color:pink; color:black;}
 p{font-size:20px}
