--- a/index11.html
+++ b/index11.html
@@ -6,7 +6,7 @@ hr{background-color:black;height:3px}
 </head>
 </style>
 <style>
-a:hover, a:visited {
+a:link, a:visited {
  background-color:WHITE;
  color: black;
  padding: 5px 3px;
