--- a/index17.html
+++ b/index17.html
@@ -12,27 +12,27 @@ h1{background-color:wheat; color:black;}
 <hr color>
 <marquee direction="right"><font size="9"color=purple> !! Welcome To B.K.Sr.Sec.School !!</font></marquee>
 <hr color>
-<marquee><font size="9">
+<marquee scrollamount="11"><font size="9">
 <img src="ree.jpg" height="200" width="200"border="2">
 Dr.Rita Sharma {Principal} <hr>
 </font></marquee>
-<marquee direction=right><font size="9">
+<marquee direction=right scrollamount="11"><font size="9">
 <img src="la.jpg" height="200" width="200"border="2">
 Mr.Lalit Sharma {Director} <hr>
 </font></marquee>
-<marquee><font size="9">
+<marquee scrollamount="11"><font size="9">
 <img src="nare.jpg" height="200" width="200"border="2">
 Mr.Narendra Sharma {Manager} <hr>
 </font></marquee>
-<marquee direction=right><font size="9">
+<marquee direction=right scrollamount="11"><font size="9">
 <img src="d.jpg" height="200" width="200"border="2">
 Mr.Ravi Garg {Our Vice Principal} <hr>
 </font></marquee>
-<marquee><font size="9">
+<marquee scrollamount="11"><font size="9">
 <img src="nan.jpg" height="200" width="200"border="2">
 Ms.Nandini Chaudhary {Senior Wing Incharge}</H2>
 </font></marquee>
-<marquee direction=right><font size="9">
+<marquee direction=right scrollamount="11"><font size="9">
 <img src="te.jpg" height="200" width="240"border="2">
 {Educators}<HR color>
 </font></marquee>
