--- a/index17.html
+++ b/index17.html
@@ -30,7 +30,7 @@ Mr.Ravi Garg {Our Vice Principal} <hr>
 </font></marquee>
 <marquee scrollamount="11"><font size="9">
 <img src="nan.jpg" height="200" width="200"border="2">
-Ms.Nandini Chaudhary {Senior Wing Incharge}</H2>
+Ms.Nandini Chaudhary {Senior Wing Incharge}<hr>
 </font></marquee>
 <marquee direction=right scrollamount="11"><font size="9">
 <img src="te.jpg" height="200" width="240"border="2">
