--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<script language="javascript">
+<!--hide
+var password;
+var pass1="Dhairya@2111";
+password=prompt('Enter password to view the Page',' ');
+if(password==pass1)
+alert('Correct password,click OK to enter.');
+else
+{
+window.location="https://www.google.com/";
+}
+//-->
+</script>
 <!DOVTYPE html>
 <HTML>
 <HEAD>
