--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <script language="javascript">
 <!--hide
 var password;
-var pass1="Dhairya@2111";
+var pass1="Db@2111";
 password=prompt('Enter password to view the Page',' ');
 if(password==pass1)
 alert('Correct password,click OK to enter.');
 else
+alert('Sorry !! wrong password,Click on OK to try again.');
 {
-window.location="https://www.google.com/";
+window.location="https://dhairyabhardwaj.github.io/website/";
 }
 //-->
 </script>
