--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ password=prompt('Enter password to view the Page',' ');
 if(password==pass1)
 alert('Correct password,click OK to enter.');
 else
-alert('Sorry !! wrong password,Click on OK to try again.');
+alert('Sorry !! wrong password,Click on OK to Exit.');
 {
-window.location="https://dhairyabhardwaj.github.io/website/";
+window.location="https://google.com/";
 }
 //-->
 </script>
