--- a/index.html
+++ b/index.html
@@ -1,18 +1,4 @@
-<script language="javascript">
-<!--hide
-var password;
-var pass1="Db@2111";
-password=prompt('Enter password to view the Page',' ');
-if(password==pass1)
-alert('Correct password,click OK to enter.');
-else
-alert('Sorry !! wrong password,Click on OK to Exit.');
-{
-window.location="https://google.com/";
-}
-//-->
-</script>
-<!DOVTYPE html>
+<!DOCTYPE html>
 <HTML>
 <HEAD>
 <TITLE> Home page </TITLE>
